Fixed narvbar collapse and switched to react-bootstrap

--- a/src/Components/Nav/styles.css
+++ b/src/Components/Nav/styles.css
@@ -1,7 +1,4 @@
-div{
-    color:white;
+.nav h3{
+    color:black;
+    margin:5px;
 }
-
-h3{
-    padding:10px;
- }
